RESOLVED FIXED239537
Skip release assert during container query resolution
https://bugs.webkit.org/show_bug.cgi?id=239537
Summary Skip release assert during container query resolution
Rob Buis
Reported 2022-04-20 04:02:36 PDT
Skip release assert during container query resolution.
Attachments
Patch (1.46 KB, patch)
2022-04-20 04:04 PDT, Rob Buis
no flags
Rob Buis
Comment 1 2022-04-20 04:04:37 PDT
EWS
Comment 2 2022-04-21 01:40:43 PDT
Committed r293147 (249843@main): <https://commits.webkit.org/249843@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 457974 [details].
Ryan Haddad
Comment 3 2022-04-21 17:09:19 PDT
Note You need to log in before you can comment on or make changes to this bug.