Skip release assert during container query resolution https://bugs.webkit.org/show_bug.cgi?id=239537

Patch by Rob Buis <rbuis@igalia.com> on 2022-04-21
Reviewed by Antti Koivisto.

Skip release assert during container query resolution
since resolveStyle will be a no-op as the container
query resolution was started in resolveStyle, so calling
resolveStyle the second time will bail right away.

* dom/Document.cpp:
(WebCore::Document::updateStyleIfNeeded):

Canonical link: https://commits.webkit.org/249843@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293147 268f45cc-cd09-0410-ab3c-d52691b4dbfc