Source/WebCore/dom/Document.cpp
@@ -2191,6 +2191,8 @@ static bool isSafeToUpdateStyleOrLayout(const Document& document)
 
 bool Document::updateStyleIfNeeded()
 {
+    if (topDocument().isResolvingContainerQueries())
+        return false;
     RefPtr<FrameView> frameView = view();
     {
         ScriptDisallowedScope::InMainThread scriptDisallowedScope;
